
                CHANGES in `mboost' VERSION 1.1-3 (2009-09-21)

  o  better x-axes in plot.cvrisk and possibility to change xlab

  o  parallel cvrisk on unix systems only (`multicore' isn't safe on windows)

  o  included new penalty for ordinal predictors (in bols())

  o  corrected bug in bspatial (centering was not used for Xna)

  o  removed output of dfbase (which is seldom used) in gamboost

  o  changed manual for coef.gamboost

  o  make sure NAs are handled correctly when center = TRUE
     in glmboost


		CHANGES in `mboost' VERSION 1.1-2 (2009-07-21)

  o  better weights and boundary knots handling in bspatial

  o  cvrisk runs in parallel if package `multicore' is available

  o  errors removed and minor improvements in the manuals

  o  center = TRUE in glmboost did only apply to numeric (not integer)
     predictors

  o  for safety reasons: na.action = na.omit again
     (causes slight changes in wpbc3 example)


		CHANGES in `mboost' VERSION 1.1-1 (2009-04-21)

  o  new quantile regression facilities.

  o  fix problem with bbs baselearner and cvrisk


		CHANGES in `mboost' VERSION 1.1-0 (2009-03-27)

  o  bbs instead of bss is the default baselearner in gamboost

  o  make sure bbs with weights and expanded observations
     returns numerically the very same results

  o  btree can now deal with multiple variables

  o  new gMDL criterion (contributed by Zhu Wang <zhu.wang@yale.edu>)

  o  make survival package happy again


		CHANGES in `mboost' VERSION 1.0-6 (2009-01-09)

  o  bols allows to specify non-default contrasts.


		CHANGES in `mboost' VERSION 1.0-5 (2008-12-02)

  o  remove experimental memory optimization steps


		CHANGES in `mboost' VERSION 1.0-4 (2008-11-12)

  o  negative gradient of GaussClass() was wrong, spotted by
     Kao Lin <linkao@picb.ac.cn>


		CHANGES in `mboost' VERSION 1.0-3 (2008-11-07)

  o  Date was malformed in DESCRIPTION


		CHANGES in `mboost' VERSION 1.0-2 (2008-11-05)
