@@ -1,3 +1,7 @@
+                CHANGES in `mboost' VERSION 1.1-4 (2009-11-??)
+
+  o  fixed bug in prediction with varying coefficients for binary
+     effect modifiers
 
                 CHANGES in `mboost' VERSION 1.1-3 (2009-09-21)
 
